tests/negative/neg_pr113_constraint_type_mismatch.safe
package neg_pr113_constraint_type_mismatch
   type packet (active : boolean = true, kind : character = 'A', count : integer = 0) is
      record
         value : integer;

   p : packet (active = 1, kind = 'A', count = 1) = (value = 1);
